--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             #box1{
                 width: 530px;
                 height: 625px;
-                background-image: url('before.jpg');
+                background-image: url('before.png');
                 position: absolute;
                 bottom: -100%;
                 left: 30%;
