--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 position: absolute;
                 width: 500px;
                 height: 600px;
-                background-image: url('log\ \(1\).png');
+                background-image: url('after.png');
                 left: 0px;
                 z-index: -1;  
             }
@@ -130,7 +130,7 @@
         <div id="box3">
             <div id="container">
                 <div id="logo">
-                    <img src="after.jpg" alt="LOGO">
+                    <!--<img src="after.png" alt="LOGO">-->
                 </div>
                 <div id="menu">
                     <ul>
