--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div id="box1"></div>
         <div id="box2">
             <div id="text">
-                Yagna Dhruva'23<br>Empower the Realm of Light
+                Unclutched<br>Let go of the code<br>in your fingertips
             </div>
         </div>
         <div id="box3">
